src/test/resources/semantic/sentences/error/TC_ERROR_CREATE_ARRAY.ru
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 13 | COLUMNA 24 | La dimensión debe ser de tipo entero. Se encontró un tipo de dato Str. |
struct A{

}

impl A{
    .(){
    }
    fn m1(Int num1)->Array Int{
        Array Int arrayInt;
        arrayInt = new Int["10"];
        ret arrayInt;
    }
}

start{
}
